# ankipush

./: .gitignore  AGENTS.md  Makefile  README.md  discussion.md  plan.md  pyproject.toml  test_media.apkg  test_real.py
src/ankipush/: __init__.py  runner.py
src/ankipush/_docker/: Dockerfile  startup.sh
src/ankipush/_docker/addon/: __init__.py  logic.py  manifest.json
src/ankipush/_docker/data/: prefs21.db
tests/: conftest.py  test_addon_logic.py  test_api.py  test_integration.py  test_runner.py
tests/data/: deck.apkg  deck2.apkg  deck_updated.apkg
tests/syncserver/: Dockerfile  docker-compose.yml
