[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ankipush"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "docker",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/ankipush"]

[tool.pytest.ini_options]
testpaths = ["tests"]
